fix loading flickering

--- a/src/app/components/pages/SteemProposalSystem.scss
+++ b/src/app/components/pages/SteemProposalSystem.scss
@@ -19,6 +19,10 @@
                 align-items: center;
                 justify-content: center;
             }
+
+            .Voting__button-up {
+                padding-right: 0 !important;
+            }
         }
 
          td.subject-column,
